# montee

./: .gitignore  README.md  pyproject.toml  tox.ini
src/montee/: __init__.py
src/montee/core/: counterfactuals.py  default_lexicon.py  montee.py
src/montee/core/models/: lexicons.py  modal_tags.py  nodes.py  triggers.py
src/montee/data/: default_lexicon.csv
src/montee/spacy/: component.py  nodes.py  register.py
src/montee/stanza/: nodes.py  processor.py  register.py
tests/: conftest.py
tests/montee/core/: default_lexicon_test.py
tests/montee/core/models/: nodes_mocks.py
tests/montee/spacy/: conftest.py  montee_test.py  nodes_test.py  register_test.py
tests/montee/stanza/: conftest.py  counterfactuals_test.py  nodes_test.py  register_test.py
